tests/dockerfile/graph_builder/checks/resources/RunUnsafeCurl/fail/Dockerfile.combo
FROM alpine:3.5
RUN curl -Lkv https://example.com
